welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:12: error: value clr is not a member of object java.awt.Color
      setCouleurBrosse(Color.clr)
                             ^