welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var Couleurs = new Array[Color](6)
  for (i <- 0 to 5){
    Couleurs(i) = getCouleurSol()
    avance()
  }
  
  def Motif(){
    for (i <- 0 to 5){
      var clr : Color = Couleurs(i)
      setCouleurBrosse(Color.clr)
      baisseBrosse(); leveBrosse()
      avance()
  	}
  }
  
  for (i <- 0 to 5){
    gauche(); avance(); droite(); avance(); Motif()
  }
}